--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,29 +1,25 @@
 cmake_minimum_required(VERSION 3.16)
 
-enable_testing()
-
 find_package(GTest CONFIG REQUIRED)
 find_package(Threads REQUIRED)
 
-if (MSVC)
-  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-endif()
-
-function(add_dltest name)
+function(add_dltest file)
+  string(REGEX REPLACE "[/\\]" "-" name "${file}")
   add_executable(${name}
     main-test.cpp
-    ${name}.cpp
+    ./${file}.cpp
   )
 
-  target_include_directories(${name} PRIVATE ../include)
-  target_link_libraries(${name} PRIVATE GTest::gtest GTest::gmock)
+  target_link_libraries(${name} PRIVATE dislua GTest::gmock GTest::gtest
+    GTest::gmock_main GTest::gtest_main)
   if (UNIX)
     target_link_libraries(${name} PRIVATE pthread)
   endif()
-  target_compile_features(${name} PRIVATE cxx_std_17)
+  target_compile_features(${name} PRIVATE cxx_std_20)
 
   add_test(NAME ${name} COMMAND ./${name})
 endfunction()
 
 add_dltest(buffer-test)
 add_dltest(types-test)
+add_dltest(lj/parse-test)
